--- a/style.css
+++ b/style.css
@@ -1,43 +1,23 @@
-* {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    border: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: Arial,sans-serif;
-}
-
-textarea{
-    background: black;
-    color: white;
-    min-height: 99px;
-}
-
-.boxes {
-    width: 600px;
-    display: flex;
-}
-
 .box {
-    width: 200px;
-    background: #333;
-    position: relative;
-    flex-shrink: 0;
+    width: 150px;
+    height: 150px;
+    border: 1px solid rgb(0,0,0);
+    transition: all 0.5s;
 }
 
-span{
-    position: absolute;
-    inset: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #fff;
+.box.bigger {
+    width: 300px;
+    height: 300px;
 }
 
-.box::before {
-    content: '';
-    display: block;
-    padding-top: 100%;
+.box.circle {
+    border-radius: 50%;
+}
+
+.box.move {
+    transform: translateX(300px);
+}
+
+.box.colored {
+    background: rebeccapurple;
 }
